envoy-config/load-balancer-google.json
{
  "listeners": [
    {
      "address": "tcp://0.0.0.0:80",
      "filters": [
        {
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "ingress_http",
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "tobackend",
                  "domains": ["*"],
                  "routes": [
                    {
                      "prefix": "/goservice",
                      "cluster": "goservice",
                      "timeout_ms": 0
                      },{
                        "prefix": "/",
                        "cluster": "google",
                        "host_rewrite": "www.google.com",
                        "timeout_ms": 0
                      }
                    ]
                  }
                ]
              },
              "filters": [
                {
                  "name": "router",
                  "config": {}
                }
              ]
            }
          }

        ]
      }
    ],
    "admin": {
      "access_log_path": "/dev/null",
      "address": "tcp://0.0.0.0:9001"
    },
    "cluster_manager": {
      "clusters": [
        {
          "name": "google",
          "type": "strict_dns",
          "connect_timeout_ms": 250,
          "lb_type": "round_robin",
          "hosts": [
            {"url": "tcp://google.com:80"}
          ]
          }, {
            "name": "goservice",
            "type": "strict_dns",
            "connect_timeout_ms": 250,
            "lb_type": "round_robin",
            "hosts": [
              {"url": "tcp://goservice:80"}
            ]
          }
        ]
      }
    }
