envoy-config/load-balancer-v1.json
{
  "listeners": [
    {
      "address": "tcp://0.0.0.0:80",
      "filters": [
        {
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "ingress_http",
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "tobackend",
                  "domains": ["*"],
                  "routes": [
                    {
                      "prefix": "/product",
                      "cluster": "google",
                      "host_rewrite": "www.google.com",
                      "timeout_ms": 0
                    }
                  ]
                }
              ]
            },
            "filters": [
              {
                "name": "router",
                "config": {}
              }
            ]
          }
        }

      ]
    }
  ],
  "admin": {
    "access_log_path": "/dev/null",
    "address": "tcp://0.0.0.0:9001"
  },
  "cluster_manager": {
    "clusters": [
      {
        "name": "...",
        "type": "...",
        "connect_timeout_ms": "...",
        "per_connection_buffer_limit_bytes": "...",
        "lb_type": "...",
        "ring_hash_lb_config": "{...}",
        "hosts": [],
        "service_name": "...",
        "health_check": "{...}",
        "max_requests_per_connection": "...",
        "circuit_breakers": "{...}",
        "ssl_context": "{...}",
        "features": "...",
        "http2_settings": "{...}",
        "cleanup_interval_ms": "...",
        "dns_refresh_rate_ms": "...",
        "dns_lookup_family": "...",
        "dns_resolvers": [],
        "outlier_detection": "{...}"
      }
    ]
  }
}
