envoy-config/load-balancerv2.json
{
  "static_resources": {
    "listeners": [
      {
        "address": "tcp://0.0.0.0:80",
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.http_connection_manager",
                "config": {
                  "codec_type": "AUTO",
                  "stat_prefix": "ingress_http",
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "name": "tobackend",
                        "domains": ["*"],
                        "routes": [
                          {
                            "match": {
                              "prefix": "/product",
                              "headers": [
                                {
                                  "name": ":method",
                                  "value": "POST"
                                }
                              ]
                            },
                            "route": {
                              "cluster": "google",
                              "host_rewrite": "www.google.com",
                              "timeout": 0
                            }
                          }
                        ]
                      }

                    ]
                  },
                  "http_filters": [
                    {
                      "name": "envoy.router",
                      "config": {}
                    }
                  ]
                }
              }
            ]
          }
        ]
      }
    ],
    "clusters": [
      {
        "name": "google",
        "type": "STRICT_DNS",
        "connect_timeout": "{...}",
        "lb_policy": "ROUND_ROBIN",
        "hosts": [
          {
            "socket_address": {
              "protocol": "TCP",
              "address": "http://www.google.com",
              "port_value": "80"
            }
          }
        ]
      }
    ]
  },
  "admin": {
    "access_log_path": "/dev/null",
    "address": {
      "socket_address": {
        "protocol": "TCP",
        "address": "0.0.0.0",
        "port_value": "9001"
      }
    }
  }
}
