envoy-config/loadbalancer.json
{
  "listeners": [
    {
      "address": "tcp://0.0.0.0:80",
      "filter_chains": [
        {
          "filters": [
            {
              "name": "envoy.http_connection_manager",
              "config": {
                "codec_type": "HTTP2",
                "stat_prefix": "ingress_http",
                "route_config": {
                  "virtual_hosts": [
                    {
                      "name": "tobackend",
                      "domains": ["*"],
                      "routes": [
                        {
                          "match": {
                            "prefix": "/product",
                            "headers": [
                              {
                                "name": ":method",
                                "value": "POST"
                              }
                            ]
                          },
                          "route": {
                            "cluster": "google",
                            "host_rewrite": "www.google.com",
                            "timeout": 0
                          }
                        }
                      ]
                    }
                  ]
                },
                "http_filters": [
                  {
                    "name": "envoy.router",
                    "config": {}
                  }
                ]
              }
            }

          ]
        }
      ]
    }
  ],
  "admin": {
    "access_log_path": "/dev/null",
    "address": "tcp://0.0.0.0:9001"
  },
  "cluster_manager": "{...}"
}
